--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -35,3 +35,8 @@ jobs:
       run: |
         pip install pyinstaller
         pyinstaller -F main.py -i icon.ico -n py-Minecraft-AFK
+    - name: Release Drafter
+      uses: release-drafter/release-drafter@v5.7.0
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
