--- a/.github/workflows/pyinstaller.yml
+++ b/.github/workflows/pyinstaller.yml
@@ -35,8 +35,23 @@ jobs:
       run: |
         pip install pyinstaller
         pyinstaller -F main.py -i icon.ico -n py-Minecraft-AFK
-    - name: Release Drafter
-      uses: release-drafter/release-drafter@v5.7.0
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@latest
       env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        draft: True
+        prerelease: false
+    - name: Upload Release Asset
+      id: upload-release-asset 
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+        asset_path: ./dist/py-Minecraft-AFK.exe
+        asset_name: py-Minecraft-AFK.exe
+        asset_content_type: application/x-msdownload
