--- a/.github/workflows/pyinstaller.yml
+++ b/.github/workflows/pyinstaller.yml
@@ -24,6 +24,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install pyinstaller
     - name: Lint with flake8
       run: |
         pip install flake8
@@ -31,9 +32,8 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Build exe
+    - name: Build with pyinstaller
       run: |
-        pip install pyinstaller
         pyinstaller -F main.py -i icon.ico -n py-Minecraft-AFK
     - name: Create Release
       id: create_release
