尝试加入剪切板操作

--- a/.gitignore
+++ b/.gitignore
@@ -138,3 +138,6 @@ MOUSEMOVE/Debug
 MOUSEMOVE/Release
 MOUSEMOVE/MOUSEMOVE/Debug
 MOUSEMOVE/MOUSEMOVE/Release
+CLIPBOARD/.vs
+CLIPBOARD/Debug
+CLIPBOARD/Release
