--- a/.github/workflows/pyinstaller.yml
+++ b/.github/workflows/pyinstaller.yml
@@ -32,7 +32,7 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Build with pyinstaller
       run: |
-        pyinstaller -F main.py -i icon.ico -n py-Minecraft-AFK
+        pyinstaller -F .\PythonCodes\main.py -i .\assets\icon.ico -n py-Minecraft-AFK
     - name: Create Release
       id: create_release
       uses: actions/create-release@latest
